--- a/src/main/resources/templates/shiyan/lookTest.html
+++ b/src/main/resources/templates/shiyan/lookTest.html
@@ -24,7 +24,7 @@
 	<body>
 		<div class="layui-fluid">
 			<div>
-				<a class="layui-btn layui-btn-sm" href="/shiyan/addQuest">新建</a>
+				<a class="layui-btn layui-btn-sm" href="/courseleader/modeltest/addQuest">新建</a>
 				<a class="layui-btn layui-btn-sm layui-btn-primary" href="/expmodel/moduleList">返回</a>
 			</div>
 			<table class="layui-table">
