--- a/src/main/resources/templates/shiyan/addLastAnswer.html
+++ b/src/main/resources/templates/shiyan/addLastAnswer.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>添加选项</title>
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/layui.css}">
     <link rel="stylesheet" type="text/css" href="../../static/css/layui.css"/>
 
 </head>
@@ -46,15 +46,25 @@
         overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
         text-overflow: ellipsis; /* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
     }
+    .p1{
+        color: #009688;
+        margin-top: 1rem;
+        font-size: 16px;
+        margin-left: 7rem;
+        font-weight: 600;
+    }
+    .p2{
+        margin: 1rem auto 1rem 7rem;
+    }
 </style>
 
 
 <body>
-<h2>添加选项</h2>
+<h2 class="p1" th:text="'对问题'+'《'+${moduleTestQuest.questDescribe}+'》'+'添加选项'">添加模块测试题</h2>
 <div class="layui-row layui-col-space10">
     <div class="layui-col-md6">
         <!--<form class="layui-form" action="">	-->
-        <form class="layui-form" th:action="@{|/shiyan/addLastAnswer/${arrangeId}|}" method="post">
+        <form class="layui-form" th:action="@{|/courseleader/modeltest/addLastAnswer/${arrangeId}|}" method="post">
             <!--<div class="layui-form-item">-->
             <!--<label class="layui-form-label">题目</label>-->
             <!--<div class="layui-input-block">-->
@@ -63,43 +73,48 @@
             <!--&lt;!&ndash;<input type="text" name="title" required lay-verify="required" placeholder="请输入题目" autocomplete="off" class="layui-input">&ndash;&gt;-->
             <!--</div>-->
             <!--</div>-->
-            <!--<div class="layui-form-item">-->
+            <div class="layui-form-item">
                 <!--<label class="layui-form-label">选项</label>-->
-                <!--<div class="layui-input-block content">-->
-                    <!--<div class="layui-card-body ">-->
-                        <!--<table class="layui-table layui-form">-->
-                            <!--<thead>-->
-                            <!--<tr>-->
+                <div class="layui-input-block content">
+                    <div class="layui-card-body ">
+                        <table class="layui-table layui-form">
+                            <thead>
+                            <tr>
                                 <!--<th>-->
                                     <!--<input type="checkbox" name="" lay-skin="primary">-->
                                 <!--</th>-->
-                                <!--<th>选项</th>-->
-                                <!--<th>内容</th>-->
-                                <!--<th>操作</th>-->
-                            <!--</thead>-->
-                            <!--<tbody>-->
-                            <!--<tr th:each="answer:${addAnswer}">-->
+                                <th>选项</th>
+                                <th>内容</th>
+                                <th>操作</th>
+                            </thead>
+                            <tbody>
+                            <tr th:each="answer:${lastAnswers}">
                                 <!--<td>-->
                                     <!--<input type="checkbox" name="answerId" lay-skin="primary">-->
                                 <!--</td>-->
-                                <!--<td th:text="${answer.answerOrder}" name="answerOrder">1</td>-->
-                                <!--<td th:text="${answer.answerDescribe}" name="answerDescribe">怎么实现？？</td>-->
+                                <td th:text="${answer.answerOrder}" name="answerOrder">1</td>
+                                <td th:text="${answer.answerDescribe}" name="answerDescribe">怎么实现？？</td>
 
-                                <!--<td class="td-manage">-->
-                                    <!--<a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;"-->
-                                       <!--th:href="@{|deleteAnswer/${answer.answerId}|}">-->
-                                        <!--<button type="button" class="layui-btn">删除</button>-->
-                                    <!--</a>-->
-                                <!--</td>-->
-                                <!--&lt;!&ndash;th:href="@{|deleteAnswer/${answer.answerId}|}"&ndash;&gt;-->
-                                <!--&lt;!&ndash;@{/detele/}+${student?.id}&ndash;&gt;-->
-                            <!--</tr>-->
-                            <!--</tbody>-->
-                        <!--</table>-->
-                    <!--</div>-->
-                <!--</div>-->
+                                <td class="td-manage">
+                                    <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;"
+                                       th:href="@{|deleteAnswer/${answer.answerId}|}">
+                                        <button type="button" class="layui-btn">删除</button>
+                                    </a>
+                                </td>
+                                <!--th:href="@{|deleteAnswer/${answer.answerId}|}"-->
+                                <!--@{/detele/}+${student?.id}-->
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
 
-            <!--</div>-->
+            </div>
+
+            <p class="p1 p2" th:text="${session.EInfo}"></p>
+
+            <label>正确答案</label>
+            <label th:text="${answerRight}"></label>
 
 
             <div class="layui-form-item">
@@ -118,9 +133,18 @@
             </div>
 
             <div class="layui-form-item">
+                <label class="layui-form-label">答案</label>
                 <div class="layui-input-block">
-                    <a th:href="@{|/shiyan/addLastQuest/${arrangeId}|}" class="layui-btn layui-btn-primary layui-bg-green">返回</a>
+                    <input type="radio" name="questAnswer" value="1" title="正确" checked="checked">
+                    <input type="radio" name="questAnswer" value="0" title="错误" checked="checked">
+                </div>
+            </div>
+
+            <div class="layui-form-item">
+                <div class="layui-input-block">
                     <button class="layui-btn layui-btn-primary layui-bg-green" lay-submit>增加选项</button>
+                    <a th:href="@{|/shiyan/lastTestList/${arrangeId}|}" class="layui-btn layui-btn-primary">返回试题列表</a>
+
                 </div>
 
             </div>
@@ -173,8 +197,9 @@
     <!--</form>-->
 
 
+<!--</div>-->
 </div>
-</div>
+<script th:src="@{/js/layui.all.js}" type="text/javascript" charset="utf-8"></script>
 <script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
 
 <!--<script>-->
