--- a/src/main/resources/templates/home_shiyan/all-test_copy.html
+++ b/src/main/resources/templates/home_shiyan/all-test_copy.html
@@ -41,7 +41,7 @@
 		<script src="//cdn.staticfile.org/layer/3.1.1/layer.min.js"></script>
 		<script>
 			function showmsg() {
-				layer.msg('Docker地址异常，请联系管理员后重试')
+				layer.msg('Docker地址异常或已过期，请与管理员联系')
 			}
 		</script>
 	</body>
