--- a/src/main/resources/templates/shiyan/addLastTest.html
+++ b/src/main/resources/templates/shiyan/addLastTest.html
@@ -120,7 +120,7 @@
                 <div class="layui-input-block">
                     <button class="layui-btn" lay-submit lay-filter="formDemo">添加题目</button>
                     <!--<a href="lookTest.html" th:href="@{|/shiyan/lastTestList/${mId*-1}|}" class="layui-btn layui-bg-green">添加完成</a>-->
-                    <a th:href="@{|/courseleader/modeltest/addLastAnswer/${arrangeId}|}" class="layui-btn layui-bg-green">继续添加选项</a>
+                    <a th:href="@{|/shiyan/addLastAnswer/${arrangeId}|}" class="layui-btn layui-bg-green">继续添加选项</a>
                     <a href="lookTest.html" th:href="@{|/shiyan/lastTestList/${arrangeId}|}" class="layui-btn layui-btn-primary">返回</a>
 
                 </div>
