--- a/src/main/resources/templates/shiyan/lookTest.html
+++ b/src/main/resources/templates/shiyan/lookTest.html
@@ -25,7 +25,7 @@
 		<div class="layui-fluid">
 			<div>
 				<a class="layui-btn layui-btn-sm layui-btn-primary" href="/expmodel/moduleList">返回</a>
-				<a class="layui-btn layui-btn-sm" th:href="@{|/courseleader/modeltest/addQuest|}">新建</a>
+				<a class="layui-btn layui-btn-sm" th:href="@{|/shiyan/addQuest|}">新建</a>
 				<a class="layui-btn layui-btn-sm" href="/shiyan/downloadTemplate">模板下载</a>
 				<a class="layui-btn layui-btn-sm selectFile"><i class="layui-icon layui-icon-upload"></i>Excel导入</a>
 				<form id="fileForm" action="/shiyan/excelIn" method="POST" enctype="multipart/form-data" style="display: none;">
