--- a/src/main/resources/templates/shiyan/addAnswer.html
+++ b/src/main/resources/templates/shiyan/addAnswer.html
@@ -46,62 +46,57 @@
         overflow: hidden; /* 内容超出宽度时隐藏超出部分的内容 */
         text-overflow: ellipsis; /* 当对象内文本溢出时显示省略标记() ；需与overflow:hidden;一起使用。*/
     }
+    .p1{
+        color: #009688;
+        margin-top: 1rem;
+        font-size: 16px;
+        margin-left: 7rem;
+        font-weight: 600;
+    }
+    .p2{
+        margin: 1rem auto 1rem 7rem;
+    }
 </style>
 
 
 <body>
-<h2>添加选项</h2>
-<div class="layui-row layui-col-space10">
+<h2 class="p1" th:text="'对问题'+'《'+${moduleTestQuest.questDescribe}+'》'+'添加选项'">添加模块测试题</h2>
+<div class="layui-row layui-col-space12">
     <div class="layui-col-md6">
         <!--<form class="layui-form" action="">	-->
-        <form class="layui-form" th:action="@{/shiyan/addAnswer}" method="post">
-            <!--<div class="layui-form-item">-->
-            <!--<label class="layui-form-label">题目</label>-->
-            <!--<div class="layui-input-block">-->
-            <!--<input type="text" name="title" th:value="${title}" required lay-verify="required" autocomplete="off"-->
-            <!--class="layui-input"/>-->
-            <!--&lt;!&ndash;<input type="text" name="title" required lay-verify="required" placeholder="请输入题目" autocomplete="off" class="layui-input">&ndash;&gt;-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--<div class="layui-form-item">-->
-                <!--<label class="layui-form-label">选项</label>-->
-                <!--<div class="layui-input-block content">-->
-                    <!--<div class="layui-card-body ">-->
-                        <!--<table class="layui-table layui-form">-->
-                            <!--<thead>-->
-                            <!--<tr>-->
-                                <!--<th>-->
-                                    <!--<input type="checkbox" name="" lay-skin="primary">-->
-                                <!--</th>-->
-                                <!--<th>选项</th>-->
-                                <!--<th>内容</th>-->
-                                <!--<th>操作</th>-->
-                            <!--</thead>-->
-                            <!--<tbody>-->
-                            <!--<tr th:each="answer:${addAnswer}">-->
-                                <!--<td>-->
-                                    <!--<input type="checkbox" name="answerId" lay-skin="primary">-->
-                                <!--</td>-->
-                                <!--<td th:text="${answer.answerOrder}" name="answerOrder">1</td>-->
-                                <!--<td th:text="${answer.answerDescribe}" name="answerDescribe">怎么实现？？</td>-->
+        <!--th:if="${moduleTestAnswers}"-->
+        <table class="layui-table layui-form">
+            <thead>
+            <th>序号</th>
+            <th>内容</th>
+            <th>操作</th>
+            </thead>
+            <tr th:each="answer:${answers}">
+                <!--                <td>-->
+                <!--                    <input type="checkbox" name="answerId" lay-skin="primary">-->
+                <!--                </td>-->
+                <td th:text="${answer.answerOrder}" name="answerOrder">1</td>
+                <td th:text="${answer.answerDescribe}" name="answerDescribe">怎么实现？？</td>
 
-                                <!--<td class="td-manage">-->
-                                    <!--<a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;"-->
-                                       <!--th:href="@{|deleteAnswer/${answer.answerId}|}">-->
-                                        <!--<button type="button" class="layui-btn">删除</button>-->
-                                    <!--</a>-->
-                                <!--</td>-->
-                                <!--&lt;!&ndash;th:href="@{|deleteAnswer/${answer.answerId}|}"&ndash;&gt;-->
-                                <!--&lt;!&ndash;@{/detele/}+${student?.id}&ndash;&gt;-->
-                            <!--</tr>-->
-                            <!--</tbody>-->
-                        <!--</table>-->
-                    <!--</div>-->
-                <!--</div>-->
+                <td class="td-manage">
+                    <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;"
+                       th:href="@{|/shiyan/deleteAnswer/${answer.answerId}|}">
+                        <button type="button" class="layui-btn">删除</button>
+                    </a>
+                </td>
+            </tr>
 
-            <!--</div>-->
+        </table>
+
+        <p class="p1 p2" th:text="${session.EF}"></p>
+
+        <label>正确答案</label>
+        <!--        <label th:each="right:${answerRights}"><span th:text="${right}">Python</span></label>-->
+        <label th:text="${answerRight}"></label>
 
 
+        <form class="layui-form" method="post">
+            <input type="hidden" name="questionId" th:value="${moduleTestQuest.questId}">
             <div class="layui-form-item">
                 <label class="layui-form-label">序号</label>
                 <div class="layui-input-block">
@@ -116,11 +111,22 @@
                     <textarea name="answerDescribe" required lay-verify="required" class="layui-textarea"></textarea>
                 </div>
             </div>
-
+            <div class="layui-form-item">
+                <label class="layui-form-label">答案</label>
+                <div class="layui-input-block">
+                    <!--                    <input type="text" name="questType" th:field="*{questType}" value="单选" title="单选">-->
+                    <!--                    <input type="text" name="questType" th:field="*{questType}" value="多选" title="多选">-->
+                    <input type="radio" name="questAnswer" value="1" title="正确" checked="checked">
+                    <input type="radio" name="questAnswer" value="0" title="错误" checked="checked">
+                </div>
+            </div>
             <div class="layui-form-item">
                 <div class="layui-input-block">
-                    <a th:href="@{|/shiyan/addQuest|}" class="layui-btn layui-btn-primary layui-bg-green">返回</a>
-                    <button class="layui-btn layui-btn-primary layui-bg-green" lay-submit>增加选项</button>
+                    <!--                    <a th:href="@{|/shiyan/addQuest|}" class="layui-btn layui-btn-primary layui-bg-green">返回</a>-->
+                    <!--th:href="@{/courseleader/modeltest/addAnswer}"-->
+                    <button lay-submit
+                            class="layui-btn layui-bg-green">继续添加问题选项</button>
+                    <a class="layui-btn layui-btn-primary layui-bg-green" th:href="@{|/shiyan/list/${mId}|}">添加完成</a>
                 </div>
 
             </div>
@@ -129,66 +135,8 @@
 
 
     </div>
-
-    <!--<div class="layui-col-md5">-->
-
-    <!--<form class="layui-form" th:action="@{/shiyan/addTest}" method="post">-->
-    <!--<div class="layui-form-item">-->
-    <!--<label class="layui-form-label">分数</label>-->
-    <!--<div class="layui-input-block">-->
-    <!--<input type="text" name="questScore" required lay-verify="required" placeholder="100"-->
-    <!--autocomplete="off" class="layui-input">-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="layui-form-item">-->
-    <!--<label class="layui-form-label">实验模块</label>-->
-    <!--<div class="layui-input-block">-->
-    <!--<input type="text" name="mId" required lay-verify="required" placeholder="1" autocomplete="off"-->
-    <!--class="layui-input">-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="layui-form-item">-->
-    <!--<label class="layui-form-label">类型</label>-->
-    <!--<div class="layui-input-block">-->
-    <!--<input type="radio" name="questType" checked="checked" value="单选" title="单选">-->
-    <!--<input type="radio" name="questType" value="多选" title="多选">-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="layui-form-item">-->
-    <!--<label class="layui-form-label">答案</label>-->
-    <!--<div class="layui-input-block">-->
-    <!--<input type="text" name="questAnswer" required lay-verify="required" placeholder="1,2,3"-->
-    <!--autocomplete="off" class="layui-input">-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="layui-form-item">-->
-    <!--<div class="layui-input-block">-->
-    <!--<a href="lookTest.html" th:href="@{|list|}" class="layui-btn layui-btn-primary">取消</a>-->
-    <!--<button class="layui-btn" lay-submit lay-filter="formDemo">确定</button>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</form>-->
-
-
-</div>
 </div>
 <script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-
-<!--<script>-->
-<!--//Demo-->
-<!--layui.use('form', function(){-->
-<!--var form = layui.form;-->
-
-<!--//监听提交-->
-<!--form.on('submit(formDemo)', function(data){-->
-<!--layer.msg(JSON.stringify(data.field));-->
-<!--return false;-->
-<!--});-->
-<!--});-->
-<!--</script>-->
 </body>
 
 </html>
