--- a/src/main/resources/templates/shiyan/lookLastTest.html
+++ b/src/main/resources/templates/shiyan/lookLastTest.html
@@ -49,7 +49,7 @@
 					</div>
 					<div class="layui-input-inline" th:if="${Choose}">
 						<!--<a th:href="@{|/shiyan/addLastQuest/${arrangeId}|}" class="layui-btn">新建</a>-->
-						<a th:href="@{|/courseleader/modeltest/addLastQuest/${arrangeId}|}" class="layui-btn">新建</a>
+						<a th:href="@{|/shiyan/addLastQuest/${arrangeId}|}" class="layui-btn">新建</a>
 					</div>
 				</div>
 			</form>
