--- a/src/main/resources/templates/shiyan/addTest.html
+++ b/src/main/resources/templates/shiyan/addTest.html
@@ -105,7 +105,7 @@
 
             <div class="layui-form-item">
                 <div class="layui-input-block">
-                    <button class="layui-btn" lay-submit lay-filter="formDemo" value="添加题目" name="judge">完成添加题目</button>
+                    <!--<button class="layui-btn" lay-submit lay-filter="formDemo" value="添加题目" name="judge">完成添加题目</button>-->
                     <button class="layui-btn layui-bg-green" value="添加选项" name="judge">继续添加问题选项</button>
                     <a href="lookTest.html" th:href="@{|/shiyan/list/${mId}|}" class="layui-btn layui-btn-primary">返回</a>
 
