--- a/src/main/resources/templates/shiyan/addLastAnswer.html
+++ b/src/main/resources/templates/shiyan/addLastAnswer.html
@@ -56,15 +56,41 @@
     .p2{
         margin: 1rem auto 1rem 7rem;
     }
+    .layui-input-block{
+        margin-left: 70px;
+    }
+    .layui-form-label{
+        width: 70px;
+        text-align: left;
+        padding: 9px 0;
+    }
+    .layui-col-space12>*{
+        margin: 0 40px;
+    }
+    .right{
+        margin: 10px 0;
+        width: auto;
+        height: 28px;
+    }
+    .right-content{
+        width: 70px;
+        height: 28px;
+    }
+    .r1{
+        float: left;
+    }
+    .answer{
+        line-height: 21px;
+    }
 </style>
 
 
 <body>
 <h2 class="p1" th:text="'对问题'+'《'+${moduleTestQuest.questDescribe}+'》'+'添加选项'">添加模块测试题</h2>
-<div class="layui-row layui-col-space10">
+<div class="layui-row layui-col-space12">
     <div class="layui-col-md6">
-        <!--<form class="layui-form" action="">	-->
-        <form class="layui-form" th:action="@{|/shiyan/addLastAnswer/${arrangeId}|}" method="post">
+        <!--<form class="layui-form"  method="post">	-->
+        <!--<form class="layui-form" th:action="@{|/shiyan/addLastAnswer/${arrangeId}|}" method="post">-->
             <!--<div class="layui-form-item">-->
             <!--<label class="layui-form-label">题目</label>-->
             <!--<div class="layui-input-block">-->
@@ -73,10 +99,10 @@
             <!--&lt;!&ndash;<input type="text" name="title" required lay-verify="required" placeholder="请输入题目" autocomplete="off" class="layui-input">&ndash;&gt;-->
             <!--</div>-->
             <!--</div>-->
-            <div class="layui-form-item">
-                <!--<label class="layui-form-label">选项</label>-->
-                <div class="layui-input-block content">
-                    <div class="layui-card-body ">
+            <!--<div class="layui-table layui-form">-->
+                <!--&lt;!&ndash;<label class="layui-form-label">选项</label>&ndash;&gt;-->
+                <!--<div class="layui-input-block content">-->
+                    <!--<div class="layui-card-body ">-->
                         <table class="layui-table layui-form">
                             <thead>
                             <tr>
@@ -106,17 +132,20 @@
                             </tr>
                             </tbody>
                         </table>
-                    </div>
-                </div>
+                    <!--</div>-->
+                <!--</div>-->
 
-            </div>
+            <!--</div>-->
 
             <p class="p1 p2" th:text="${session.EInfo}"></p>
 
-            <label>正确答案</label>
-            <label th:text="${answerRight}"></label>
+            <div class="right">
+                <p class="right-content r1">正确答案</p>
+                <!--        <label th:each="right:${answerRights}"><span th:text="${right}">Python</span></label>-->
+                <p class="r1 answer" th:text="${answerRight}">1,2,3</p>
+            </div>
 
-
+<form  class="layui-form"  method="post">
             <div class="layui-form-item">
                 <label class="layui-form-label">题目序号</label>
                 <div class="layui-input-block">
