--- a/src/main/resources/templates/shiyan/addLastTest.html
+++ b/src/main/resources/templates/shiyan/addLastTest.html
@@ -118,9 +118,9 @@
 
             <div class="layui-form-item">
                 <div class="layui-input-block">
-                    <button class="layui-btn" lay-submit lay-filter="formDemo"  value="添加题目" name="judge">添加题目</button>
+                    <!--<button class="layui-btn" lay-submit lay-filter="formDemo"  value="添加题目" name="judge">添加题目</button>-->
                     <!--<a href="lookTest.html" th:href="@{|/shiyan/lastTestList/${mId*-1}|}" class="layui-btn layui-bg-green">添加完成</a>-->
-                    <button class="layui-btn layui-bg-green"  value="添加选项" name="judge">继续添加选项</button>
+                    <button class="layui-btn layui-bg-green"  value="添加选项" name="judge" layui-submit>继续添加选项</button>
                     <a href="lookTest.html" th:href="@{|/shiyan/lastTestList/${arrangeId}|}" class="layui-btn layui-btn-primary">返回</a>
 
                 </div>
